syntax = "proto3";

option java_package = "dev.slne.surf.shulker.proto.platform";
option java_multiple_files = true;

import "group_provider.proto";

service PlatformController {
  rpc find(FindPlatformRequest) returns (FindPlatformResponse);
}

message FindPlatformRequest {
  optional string name = 1;
  optional GroupType type = 2;
}

message FindPlatformResponse {
  repeated PlatformSnapshot platforms = 1;
}

message PlatformSnapshot {
  string name = 1;
  GroupType type = 2;
  repeated PlatformVersionSnapshot versions = 3;
}

message PlatformVersionSnapshot {
  string version = 1;
}